project2_handle/test/test_11711707_01.out
Error type 13 at Line 10: accessing an undefined structure member
Error type 10 at Line 10: applying indexing operator ([...]) on non-array type variables
Error type 5 at Line 10: unmatching type on both sides of assignment
Error type 10 at Line 12: applying indexing operator ([...]) on non-array type variables
Error type 5 at Line 12: unmatching type on both sides of assignment
Error type 5 at Line 14: unmatching type on both sides of assignment
Error type 5 at Line 17: unmatching type on both sides of assignment
